<resources>
    <string name="app_name">To Do</string>

    <string name="empty_string" />

    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="save_task">Save Task</string>
    <string name="save">Save</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete">Delete</string>

    <string name="please_enter_task_title">Please enter task title</string>
    <string name="please_enter_task_description">Please enter task description</string>

    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_description">Enter task description</string>

    <string name="task_saved">Task Saved</string>
    <string name="add_task">Add Task</string>
    <string name="app_logo">App logo</string>
    <string name="task">Task</string>
    <string name="couldnt_get_task_details">Couldn\'t get task details</string>
    <string name="changes_saved">Changes Saved</string>
    <string name="title_cant_be_blank">Title can\'t be blank</string>
    <string name="tasks">Tasks</string>
    <string name="completed">Completed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="criteria_for_sort_by">Criteria for sort by</string>
    <string name="close">Close</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="date_added">Date Added</string>
    <string name="sorted_alphabetically">Sorted alphabetically</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="selected_status">Selected status</string>
    <string name="sorted_by_completion_status">Sorted by completion status</string>
    <string name="sorted_by_added_date">Sorted by added date</string>
    <string name="icon_for_options_in_sort_by_bottom_sheet">Icon for options in sort by bottom sheet</string>
    <string name="beach_chair">Beach Chair</string>
    <string name="there_are_no_tasks">There are no tasks</string>

    <string name="change_theme">Change Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="follow_system">Follow System</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="are_you_sure_want_to_delete_this_task">Are you sure you want to delete this task?</string>
    <string name="due_date">Due Date</string>
    <string name="today">Today</string>

    <string-array name="theme_options">

        <item>@string/follow_system</item>
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>

    </string-array>

</resources>
