<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_tasks.MyTasksFragment">

    <LinearLayout
        android:id="@+id/ll_empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/iv_empty_state_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/beach_chair"
            android:paddingHorizontal="150dp"
            android:paddingTop="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_beach_chair" />

        <TextView
            android:id="@+id/iv_empty_state_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/there_are_no_tasks"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_tasks_sorting_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@id/iv_tasks_sorting_order_icon"
            android:gravity="end|center_vertical"
            android:textSize="14sp"
            tools:text="@string/sorted_alphabetically" />

        <ImageView
            android:id="@+id/iv_tasks_sorting_order_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_tasks_sorting_order"
            android:layout_alignBottom="@id/tv_tasks_sorting_order"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/arrow_icon"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:src="@drawable/ic_arrow_up" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_remaining_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_tasks_sorting_order"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_add" />

</FrameLayout>